# crash-detector

./: .gitignore  README.md  main.py  pyproject.toml  template.py
config/: config.yaml
schemas/: gta-crash.yaml
scripts/: download_dataset.py  etl_pipeline.py
src/crash_detection/: __init__.py
src/crash_detection/components/data/: ingestion.py
src/crash_detection/components/dataset/: video2d.py
src/crash_detection/components/engines/: base.py
src/crash_detection/components/loss/: __init__.py
src/crash_detection/components/model/: dataset.py  eval.py  metrics.py  model.py  train.py  utils.py
src/crash_detection/components/models/: Video2dModel.py  __init__.py
src/crash_detection/components/training/: __init__.py  model.py  optimizer.py
src/crash_detection/config/: __init__.py  artifact_entity.py  config_entity.py
src/crash_detection/constants/: __init__.py
src/crash_detection/core/: __init__.py  artifact_entity.py  config_entity.py  hw_info.py  io_types.py
src/crash_detection/errors/: __init__.py
src/crash_detection/pipelines/: base.py
src/crash_detection/utils/: common.py
working/: baseline-training.ipynb  crashdata-etl-from-gdrive.ipynb  crashdata-etl-wodownload.ipynb  data-ingestion.ipynb  data-transformation.ipynb  data-validation.ipynb  model-training.ipynb
